Fix JavaFX runtime - Add module-path and add-modules to run configuration